<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_textview_myapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/my_app"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/main_edittext_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/main_edittext_usuario"
        android:inputType="text"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/main_edittext_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_edittext_usuario"
        android:hint="@string/main_edittext_contraseña"
        android:inputType="textPassword"
        android:textSize="30dp" />

    <Button
        android:id="@+id/main_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_edittext_contraseña"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:onClick="onClickLogin"
        android:textSize="20dp" />

    <Button
        android:id="@+id/main_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/main_button_login"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:onClick="onClickRegister"
        android:textSize="20dp" />

</RelativeLayout>