<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/register_edittext_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:hint="@string/register_edittext_usuario"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/register_edittext_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_edittext_usuario"
        android:layout_centerHorizontal="true"
        android:hint="@string/register_edittext_contraseña"
        android:inputType="textPassword"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/register_edittext_confirmar_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_edittext_contraseña"
        android:layout_centerHorizontal="true"
        android:hint="@string/register_edittext_confirmar_contraseña"
        android:inputType="textPassword"
        android:textSize="30dp" />

    <Button
        android:id="@+id/register_button_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_edittext_confirmar_contraseña"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textSize="20dp" />

</RelativeLayout>